--- a/app/src/main/res/layout/activity_task.xml
+++ b/app/src/main/res/layout/activity_task.xml
@@ -148,8 +148,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:hint="task name "
-            android:background="#"/>
+            android:hint="task name " />
 
         <Button
             android:layout_width="110dp"
