--- a/final_report/src/main/res/layout/activity_log.xml
+++ b/final_report/src/main/res/layout/activity_log.xml
@@ -22,7 +22,9 @@
         <Spinner
             android:id="@+id/logspinner1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="wrap_content">
+
+        </Spinner>
     </LinearLayout>
 
     <LinearLayout
