Layout4(spinner_option)

--- a/final_report/src/main/res/layout/activity_log.xml
+++ b/final_report/src/main/res/layout/activity_log.xml
@@ -12,23 +12,6 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Log list"
-            android:textSize="25dp"/>
-        <Spinner
-            android:id="@+id/logspinner1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </Spinner>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true">
         <Button
@@ -60,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:id="@+id/logfinfish"
-            android:text="finish"/>
+            android:text="preview"/>
     </LinearLayout>
 
     <LinearLayout
@@ -72,5 +55,24 @@
             android:id="@+id/logtextview1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+        <TextView
+            android:id="@+id/logintenttexview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Log List"
+            android:textSize="25dp"/>
+        <Spinner
+            android:id="@+id/logspinner1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/taskindex"></Spinner>
     </LinearLayout>
 </RelativeLayout>
