--- a/final_report/src/main/res/layout/activity_new_report.xml
+++ b/final_report/src/main/res/layout/activity_new_report.xml
@@ -1,31 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_report"
+    android:id="@+id/activity_new_report"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.final_report.ReportActivity"
-    android:layout_centerVertical="true">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_height="240dp"
-        android:id="@+id/linearLayout2">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Goal"
-            android:textSize="25dp"/>
-        <Spinner
-            android:id="@+id/reportspinner1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></Spinner>
-    </LinearLayout>
+    tools:context="com.example.final_report.NewReportActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +53,34 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:id="@+id/reportfinfish"
-            android:text="finish"/>
+            android:text="preview"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:id="@+id/linearLayout2"
+        android:weightSum="1"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
+        <TextView
+            android:id="@+id/goalview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Goal List"
+            android:textSize="25dp"/>
+
+        <Spinner
+            android:id="@+id/reportspinner1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/taskindex"
+            android:layout_weight="1.0"></Spinner>
+
+        <Button
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/report_call_btn"
+            android:text="call"/>
     </LinearLayout>
 </RelativeLayout>
