--- a/final_report/src/main/res/layout/activity_task.xml
+++ b/final_report/src/main/res/layout/activity_task.xml
@@ -39,10 +39,10 @@
             android:text="main"/>
         <Button
             android:onClick="onClick"
-            android:layout_width="80dp"
+            android:layout_width="90dp"
             android:layout_height="40dp"
             android:id="@+id/taskfinfish"
-            android:text="finish"/>
+            android:text="preview"/>
     </LinearLayout>
 
     <LinearLayout
@@ -78,8 +78,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="440dp"
-        android:orientation="vertical"
-        android:layout_above="@+id/linearLayout"
+        android:orientation="horizontal"
+        android:layout_centerVertical="true"
         android:layout_alignParentStart="true">
         <TextView
             android:id="@+id/tasktextview1"
@@ -87,10 +87,12 @@
             android:layout_height="wrap_content"
             android:text="Task Index"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
+
         <Spinner
             android:id="@+id/taskspinner1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="wrap_content"
+            android:entries="@array/taskindex"></Spinner>
 
     </LinearLayout>
 </RelativeLayout>
