--- a/final_report/src/main/res/layout/activity_new_report.xml
+++ b/final_report/src/main/res/layout/activity_new_report.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/linearLayout2"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/linearLayout3">
         <TextView
             android:id="@+id/reportTextview1"
             android:layout_width="match_parent"
@@ -23,7 +24,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:id="@+id/linearLayout3">
         <Button
             android:onClick="onClick"
             android:layout_width="65dp"
@@ -58,7 +60,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="240dp"
+        android:layout_height="40dp"
         android:id="@+id/linearLayout2"
         android:weightSum="1"
         android:layout_alignParentTop="true"
@@ -77,10 +79,5 @@
             android:entries="@array/taskindex"
             android:layout_weight="1.0"></Spinner>
 
-        <Button
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/report_call_btn"
-            android:text="call"/>
     </LinearLayout>
 </RelativeLayout>
