--- a/final_report/src/main/res/layout/activity_task.xml
+++ b/final_report/src/main/res/layout/activity_task.xml
@@ -53,46 +53,60 @@
         android:id="@+id/linearLayout">
 
         <EditText
+            android:id="@+id/add_Task"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="task name " />
 
-        <Button
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/taskbottombutton1"
-            android:onClick="onClick"
-            android:text="cancle"/>
 
         <Button
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:id="@+id/taskbottombutton2"
+            android:id="@+id/taskbottombutton_add"
             android:onClick="onClick"
             android:text="+"/>
+        <Button
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/taskbottombutton_Cancle"
+            android:onClick="onClick"
+            android:text="cancle"/>
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="440dp"
+        android:layout_height="40dp"
         android:orientation="horizontal"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="39dp"
+        android:id="@+id/linearLayout4">
         <TextView
             android:id="@+id/tasktextview1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Task Index"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
-
         <Spinner
             android:id="@+id/taskspinner1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:entries="@array/taskindex"></Spinner>
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/linearLayout"
+        android:layout_below="@+id/linearLayout4">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/task_spinner_ShowTextview"
+            android:textSize="15dp"/>
     </LinearLayout>
 </RelativeLayout>
