--- a/final_report/src/main/res/values/arrays.xml
+++ b/final_report/src/main/res/values/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="taskindex">
         <!--<item>[]</item>-->
-
+        <item>TaskName</item>
         <item>game</item>
         <item>move</item>
         <item>sleep</item>
