--- a/final_report/src/main/res/layout/activity_maps.xml
+++ b/final_report/src/main/res/layout/activity_maps.xml
@@ -1,3 +1,4 @@
+<!--
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -5,4 +6,19 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.final_report.MapsActivity" />
+    tools:context="com.example.final_report.MapsActivity"
+    class="com.google.android.gms.maps.MapFragment"/>
+
+-->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.example.final_report.MapsActivity" >
+  <fragment
+    android:id="@+id/map"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    class="com.google.android.gms.maps.MapFragment"
+    tools:layout="@layout/activity_maps"/>
+</RelativeLayout>
