--- a/final_report/src/main/res/layout/activity_camera.xml
+++ b/final_report/src/main/res/layout/activity_camera.xml
@@ -11,20 +11,10 @@
   android:paddingTop="@dimen/activity_vertical_margin"
   tools:context="com.example.final_report.CameraActivity">
 
-  <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="600dp"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_above="@+id/carmerebtn"
-    android:weightSum="1">
-    <ImageView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:id="@+id/ImageView1"
-      />
-
-  </LinearLayout>
+  <ImageView
+    android:id="@+id/iv"
+    android:layout_width="300dp"
+    android:layout_height="300dp" />
 
   <Button
     android:onClick="onClick"
@@ -37,8 +27,8 @@
   <Button
     android:onClick="onClick"
     android:layout_height="50dp"
-    android:id="@+id/carmerebtn"
-    android:text="shout"
+    android:id="@+id/btn"
+    android:text="picture"
     android:layout_width="180dp"
     android:layout_alignParentBottom="true"
     android:layout_toEndOf="@+id/carmerebtn_store"/>
