--- a/final_report/src/main/res/layout/activity_task.xml
+++ b/final_report/src/main/res/layout/activity_task.xml
@@ -104,20 +104,52 @@
 
     <LinearLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="200dp"
       android:layout_below="@+id/linearLayout4"
       android:layout_alignParentStart="true"
-      android:layout_above="@+id/linearLayout"
-      android:orientation="horizontal">
+      android:orientation="horizontal"
+      android:id="@+id/linearLayout7">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/task_spinner_ShowTextview"
             android:textSize="15dp"/>
+
         <View
           android:layout_width="match_parent"
           android:layout_height="3dip"
           android:background="#ffffff"/>
     </LinearLayout>
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_below="@+id/linearLayout7"
+      android:layout_alignParentStart="true"
+      android:orientation="horizontal"
+      android:id="@+id/linearLayout8">
+
+        <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Task Index"
+          android:id="@+id/tasktextView2"/>
+        <Spinner
+          android:id="@+id/taskspinner2"
+          android:entries="@array/taskindex"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/linearLayout7"
+          android:layout_alignParentEnd="true"></Spinner>
+    </LinearLayout>
+
+    <TextView
+      android:layout_width="match_parent"
+      android:layout_height="180dp"
+      android:id="@+id/task_spinner_ShowTextview2"
+      android:layout_below="@+id/linearLayout8"
+      android:layout_alignParentStart="true"/>
+
+
 </RelativeLayout>
