--- a/final_report/src/main/res/layout/activity_camera.xml
+++ b/final_report/src/main/res/layout/activity_camera.xml
@@ -27,18 +27,18 @@
   <Button
     android:onClick="onClick"
     android:layout_height="50dp"
-    android:id="@+id/btn"
-    android:text="picture"
-    android:layout_width="180dp"
-    android:layout_alignParentBottom="true"
-    android:layout_toEndOf="@+id/carmerebtn_store"/>
-
-  <Button
-    android:onClick="onClick"
-    android:layout_height="50dp"
     android:id="@+id/carmere_btn_preciew"
     android:text="Prieview"
     android:layout_width="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentEnd="true"/>
+
+  <Button
+    android:onClick="onClick"
+    android:layout_height="50dp"
+    android:id="@+id/btn"
+    android:text="picture"
+    android:layout_width="150dp"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"/>
 </RelativeLayout>
